--- a/react-app/src/components/SplashPage/splash.css
+++ b/react-app/src/components/SplashPage/splash.css
@@ -1,16 +1,34 @@
 .splash-page-container {
     position: relative;
-    min-height: 100vh;
+    height: fit-content;
     display: flex;
     justify-content: center;
-    align-items: center;
+    padding-top: 15vh;
+    width: 100%;
+}
+
+.splash-left {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 3%;
+    flex-direction: column;
+    padding-right: 3%;
+    width: 30vw;
+}
+
+.splash-right {
+    padding-left: 3%;
 }
 
 .splash-text {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: blue;
-    font-size: 5vh;
-    font-weight: bold;
+    font-size: 7vh;
+    font-weight: bolder;
+}
+
+.splash-subtitle {
+    font-size: 4vh;
 }
 
 #footer {
