--- a/react-app/src/components/navbar.css
+++ b/react-app/src/components/navbar.css
@@ -4,6 +4,7 @@
     align-items: center;
     background-color: white;
     position: absolute;
+    z-index: 10;
     height: 5vh;
     top: 0;
     left: 0;
