--- a/react-app/src/components/SplashPage/splash.css
+++ b/react-app/src/components/SplashPage/splash.css
@@ -21,7 +21,7 @@
 }
 
 .splash-text {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
     color: blue;
     font-size: 7vh;
     font-weight: bolder;
