--- a/react-app/src/components/Profile/profile.css
+++ b/react-app/src/components/Profile/profile.css
@@ -1,7 +1,3 @@
-.profile-container {
-    background-color: white;
-}
-
 .profile-background-color {
     background-color: white;
     left: 0;
@@ -9,16 +5,15 @@
 }
 
 .profile-images {
+    background: linear-gradient(rgb(206, 204, 204), white);
     display: flex;
     justify-content: center;
-    /* width: fit-content; */
     position: relative;
     padding-bottom: 7vw;
 }
 
 .cover-photo {
     object-fit: cover;
-    /* object-fit: none; */
     width: 50vw;
     max-height: 50vh;
     border-bottom-left-radius: 8px;
@@ -63,6 +58,7 @@
     justify-content: space-around;
     width: 100%;
     padding-bottom: 2.4vh;
+    background-color: white;
 }
 
 .nav-links {
