--- a/react-app/src/components/Posts/posts.css
+++ b/react-app/src/components/Posts/posts.css
@@ -3,6 +3,32 @@
     width: 100%
 }
 
+.containers {
+    background-color: white;
+}
+
+.intro-container {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+}
+
+.containers {
+    padding: 1rem;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
+}
+
+.intro-container > span,
+.intro-container > div {
+    margin-bottom: 1rem;
+}
+
+.category-row {
+    display: flex;
+}
+
 .user-info {
     width: 45%;
     display: flex;
@@ -13,4 +39,48 @@
     width: 55%;
     display: flex;
     flex-direction: column;
+}
+
+.profile-labels {
+    font-weight: bold;
+}
+
+.icon {
+    color: grey;
+    display: flex;
+    margin-left: 1.5rem;
+}
+
+.icon-row {
+    width: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.row-Data {
+    margin-left: 1rem;
+}
+
+.fas {
+    margin: auto;
+}
+
+.profile-nav-links1 {
+    font-size: 1rem;
+    font-weight: 600;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding: 10px;
+}
+
+.edit-profileBtn1 {
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+    align-items: center;
+    color: rgb(87, 87, 87);
+}
+
+.edit-profileBtn1:hover {
+    background-color: rgb(226, 226, 226);
 }
