--- a/react-app/src/components/navbar.css
+++ b/react-app/src/components/navbar.css
@@ -12,15 +12,33 @@
 }
 
 .nav-left {
-    width: 18%;
+    width: 33%;
 }
 
 .nav-mid {
-    widtH: 68%;
+    width: 34%;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    color: grey
+}
+
+.fontAwesomeness {
+    font-size: 1.6vw;
+    color: grey;
+    padding-left: 1.2rem;
+    padding-right: 1.2rem;
+    padding-bottom: .3rem;
+    padding-top: .3rem;
+}
+
+.fontAwesomeness:hover {
+    cursor: pointer;
+    background-color: rgb(238, 238, 238);
+    color: #2282ff;
+    border-radius: 8px;
 }
 
 .nav-right {
-    width: 18%;
+    width: 33%;
+    right: 0;
 }
