--- a/react-app/src/components/navbar.css
+++ b/react-app/src/components/navbar.css
@@ -14,6 +14,8 @@
 .nav-left {
     width: 33%;
     margin-left: 1rem;
+    display: flex;
+    align-items: center;
 }
 
 .nav-mid {
@@ -63,7 +65,9 @@
 
 .navbar-profile-pic {
     border-radius: 50%;
+    object-fit: cover;
     width: 2rem;
+    height: 2rem;
     margin-right: .3rem;
 }
 
