--- a/react-app/src/components/Posts/posts.css
+++ b/react-app/src/components/Posts/posts.css
@@ -1,6 +1,6 @@
 .post-container {
     display: flex;
-    width: 100%
+    width: 100%;
 }
 
 .intro-container {
@@ -149,11 +149,16 @@
     border-bottom-right-radius: 12px;
 }
 
+.post-box {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
 .post-name-row {
     display: flex;
     align-items: center;
-    width: 100%;
-    margin-right: 1.3rem; /*right side of post box*/
+    margin-right: 1rem; /*right side of post box*/
 }
 
 .post-image-wall {
@@ -187,4 +192,40 @@
 
 .post-field:focus {
     outline: none;
+}
+
+.post-box-buttons {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    max-height: 1.5rem;
+}
+
+.fa-pen {
+    color: red;
+}
+
+.fa-images {
+    color: rgb(0, 180, 0);
+}
+
+.fa-laugh {
+    color: rgb(206, 158, 0);
+}
+
+.postBtns {
+    font-weight: bold;
+    color: rgb(151, 151, 151);
+}
+
+.boxBtn {
+    padding-left: .6rem;
+    padding-right: .6rem;
+    padding-top: .7rem;
+    padding-bottom: .7rem;
+    border-radius: 12px;
+}
+
+.boxBtn:hover {
+    background-color: rgb(238, 238, 238);
 }
