--- a/react-app/src/components/Posts/posts.css
+++ b/react-app/src/components/Posts/posts.css
@@ -277,12 +277,17 @@
 
 .post-name-comment {
     display: flex;
-    /* margin-bottom: .8rem; */
+    margin-bottom: .8rem;
+}
+
+.last-comment:last-child {
+    margin-bottom: 0rem!important;
 }
 
 .name-comment {
     display: flex;
     flex-direction: column;
+    width: 100%;
     background-color: rgb(238, 238, 238);
     padding-top: .5rem;
     padding-bottom: .5rem;
@@ -315,4 +320,3 @@
 .like-unlike2 {
     font-weight: bold;
 }
-
