--- a/react-app/src/components/Posts/posts.css
+++ b/react-app/src/components/Posts/posts.css
@@ -247,6 +247,20 @@
     margin-bottom: .8rem;
 }
 
+.edit-delete-post-btn-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.fa-trash-alt {
+    cursor: pointer;
+}
+
+.trash-can-post:hover {
+    cursor: pointer;
+}
+
 .name-date {
     display: flex;
     flex-direction: column;
