--- a/react-app/src/components/Posts/posts.css
+++ b/react-app/src/components/Posts/posts.css
@@ -112,7 +112,7 @@
     font-size: .9rem;
     font-weight: 600;
     padding-left: 1rem;
-    padding-right: 1rem;
+    padding-right: .4rem;
 }
 
 .edit-profileBtn3:hover {
