--- a/react-app/src/components/Posts/posts.css
+++ b/react-app/src/components/Posts/posts.css
@@ -111,7 +111,7 @@
     color: #1877f2;
     font-size: .9rem;
     font-weight: 600;
-    padding-left: 1rem;
+    padding-left: .4rem;
     padding-right: .4rem;
 }
 
