--- a/react-app/src/components/Posts/posts.css
+++ b/react-app/src/components/Posts/posts.css
@@ -209,7 +209,25 @@
     font-size: 1rem;
 }
 
+.show-comment-edit-field {
+    width: 100%;
+    /* background-color: rgb(238, 238, 238); */
+    background-color: white;
+    border: 2px grey solid;
+    /* border: hidden; */
+    padding-top: .6rem;
+    padding-bottom: .6rem;
+    border-radius: 12px;
+    padding-left: 1rem;
+    margin-right: .5rem;
+    font-size: 1rem;
+}
+
 .show-post-edit-field:focus {
+    outline: none;
+}
+
+.show-comment-edit-field:focus {
     outline: none;
 }
 
@@ -220,6 +238,17 @@
     padding-top: .7rem;
     padding-bottom: .7rem;
     border-radius: 500px;
+    color: rgb(131, 131, 131)
+}
+
+.save-comment-button {
+    font-weight: bold;
+    padding-left: .6rem;
+    padding-right: .6rem;
+    margin-right: .5rem;
+    padding-top: .7rem;
+    padding-bottom: .7rem;
+    border-radius: 12px;
     color: rgb(131, 131, 131)
 }
 
@@ -235,6 +264,12 @@
 
 .save-edit-button:hover {
     background-color: rgb(238, 238, 238);
+    cursor: pointer;
+}
+
+.save-comment-button:hover {
+    /* background-color: rgb(238, 238, 238); */
+    background-color: white;
     cursor: pointer;
 }
 
@@ -265,7 +300,7 @@
 
 .comment-field {
     width: 91%;
-
+    border: 10px solid rgb(131, 131, 131);
     background-color: rgb(238, 238, 238);
     border: hidden;
     padding-top: .6rem;
@@ -434,4 +469,22 @@
 
 .like-unlike2 {
     font-weight: bold;
+}
+
+
+/* COMMENT SECTION */
+.edit-delete-comment-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.pencil-icon-comment,
+.trash-icon-comment {
+    margin-right: .5rem;
+    color: grey;
+    font-size: .7rem;
+}
+
+.comment-icon-position {
+    display: flex;
 }
