--- a/react-app/src/components/Posts/posts.css
+++ b/react-app/src/components/Posts/posts.css
@@ -497,3 +497,32 @@
 .comment-icon-position {
     display: flex;
 }
+
+
+/* THUMBS UP COMMENT */
+.like-post-container {
+    display: flex;
+    align-items: center;
+    padding-top: 1rem;
+    margin-bottom: -.7rem;
+    margin-top: -.3rem;
+}
+
+.thumbs-up-icon {
+    color: white;
+    /* border-color: rgb(91, 91, 219); */
+    /* background-color: #AAC9FF; */
+    /* background-color: #77A7FF; */
+    background-color: #1877F2;
+    border-radius: 50%;
+    position: relative;
+    font-size: .5rem;
+    padding: .8%;
+
+}
+
+.post-like-counter {
+    color: #1877F2;
+    font-size: .8rem;
+    font-weight: larger;
+}
