--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -7,6 +7,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
+
 }
 
 #modal-background {
@@ -15,10 +17,18 @@
   right: 0;
   left: 0;
   bottom: 0;
-  background-color: rgba(255, 255, 255, .8);
+  background-color: rgba(228, 228, 228, 0.8);
+
 }
 
 #modal-content {
   position: absolute;
   background-color: white;
+  padding: 5rem;
+  border-radius: 12px;
+  /* border: 1px solid;
+  border-color: red; */
+  box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
+
+
 }
