--- a/react-app/src/components/Search/search.css
+++ b/react-app/src/components/Search/search.css
@@ -38,12 +38,25 @@
     width: 100%;
     position: absolute;
     margin-top: 3rem;
-    background-color: #f0f2f5;
+    background-color: white;
+    border-radius: 12px;
 }
 
 .search-result-row {
     display: flex;
     align-items: center;
+    margin-left: 1rem;
+    margin-top: .2rem;
+    margin-bottom: .2rem;
+    margin-right: 1rem;
+    border-radius: 12px;
+    padding-top: .2rem;
+    padding-bottom: .2rem;
+    padding-left: .4rem;
+}
+
+.search-result-row:hover {
+    background-color: #f0f2f5;
 }
 
 .search-portrait {
@@ -51,5 +64,14 @@
     object-fit: cover;
     width: 2.5rem;
     height: 2.5rem;
-    margin-right: .5rem; /*left side of post box*/
+    margin-right: .5rem;
+}
+
+.search-header {
+    margin-left: 1rem;
+    margin-top: .6rem;
+}
+
+.result-text {
+    font-weight: bold;
 }
