--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -15,13 +15,15 @@
   right: 0;
   left: 0;
   bottom: 0;
-  background-color: rgba(228, 228, 228, 0.8);
+  background-color: rgba(255, 255, 255, 0.8);
 
 }
 
 #modal-content {
   position: absolute;
   background-color: white;
+  /* display: flex; */
+  width: 23vw;
   border-radius: 12px;
   box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
 }
