--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -23,7 +23,7 @@
   position: absolute;
   background-color: white;
   /* display: flex; */
-  width: 23vw;
+  min-width: 23vw;
   border-radius: 12px;
   box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
 }
