--- a/react-app/src/components/navbar.css
+++ b/react-app/src/components/navbar.css
@@ -3,7 +3,7 @@
     width: 100%;
     align-items: center;
     background-color: white;
-    position: absolute;
+    position: fixed;
     z-index: 10;
     height: 5vh;
     top: 0;
