feed in progress

--- a/react-app/src/components/Profile/profile.css
+++ b/react-app/src/components/Profile/profile.css
@@ -39,7 +39,7 @@
     bottom: 0;
     left: 27%;
     border-radius: 50%;
-    border: 3px grey solid;
+    border: 3px white solid;
 }
 
 .profile-content {
