feed comments and post loaded

--- a/react-app/src/components/Feed/feed.css
+++ b/react-app/src/components/Feed/feed.css
@@ -14,6 +14,11 @@
     flex-direction: column;
 }
 
+.post-box {
+    display: flex;
+    flex-direction: column;
+}
+
 .story-container {
     width: 100%;
 }
