feed in progress

--- a/react-app/src/components/Posts/posts.css
+++ b/react-app/src/components/Posts/posts.css
@@ -30,6 +30,18 @@
     background-color: white;
 }
 
+.feed-containers {
+    padding: 1rem;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
+    margin-top: 1rem;
+    /* margin-left: .5rem;
+    margin-right: .5rem; */
+    background-color: white;
+    position: relative;
+    z-index: 2;
+}
+
 .intro-container > span,
 .intro-container > div {
     margin-bottom: 1rem;
