--- a/react-app/src/components/Feed/feed.css
+++ b/react-app/src/components/Feed/feed.css
@@ -1,18 +1,52 @@
 .feed-container {
     display: flex;
     width: 100%;
-    margin-top: 5rem;
+    margin-top: 4rem;
+    /* position: fixed; */
+}
+
+.left-side-feed {
+    width: 33%;
+    position: relative;
 }
 
 .feed-side-column {
-    width: 33%
+    display: flex;
+    flex-direction: column;
+    max-height: 100vh;
+    position: fixed;
 }
 
 .feed-main-column {
     width: 34%;
     display: flex;
     flex-direction: column;
+    position: relative;
 }
+
+.left-side-options {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin-left: 1rem;
+    margin-right: 5rem; /*extend border shading*/
+    margin-bottom: .5rem;
+    padding-left: .5rem;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    border-radius: 8px;
+}
+
+.left-side-options:hover {
+    background-color: rgb(216, 216, 216);
+}
+
+.feed-left-option-label {
+    font-weight: bold;
+    font-size: .9rem;
+    margin-left: .5rem;
+}
+
 
 .feed-post-box {
     display: flex;
