--- a/react-app/src/components/Feed/feed.css
+++ b/react-app/src/components/Feed/feed.css
@@ -5,7 +5,8 @@
     /* position: fixed; */
 }
 
-.left-side-feed {
+.left-side-feed,
+.right-side-feed {
     width: 33%;
     position: relative;
 }
@@ -13,7 +14,7 @@
 .feed-side-column {
     display: flex;
     flex-direction: column;
-    max-height: 100vh;
+    /* max-height: 100vh; */
     position: fixed;
 }
 
